--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
       padding: 0.95rem 2.9rem;
       border-radius: 999px;
       background: linear-gradient(135deg, rgba(24, 30, 45, 0.96), rgba(10, 14, 24, 0.96));
-      color: #d8dce8;
+      color: rgba(198, 202, 214, 0.85);
       font-weight: 500;
       letter-spacing: 0.04em;
       text-decoration: none;
-      text-transform: uppercase;
+      text-transform: none;
       transition: transform 0.25s ease, box-shadow 0.25s ease, background 0.25s ease;
       box-shadow:
         0 14px 28px rgba(3, 4, 10, 0.68),
@@ -128,7 +128,7 @@
   </div>
 
   <main class="main-content">
-    <a class="contact-button" href="mailto:oorischubert@gmail.com">Contact us</a>
+    <a class="contact-button" href="mailto:melangebot@gmail.com">Contact us</a>
   </main>
 
 
